refactor: Downloads folder created, and ignored by the .git

--- a/notebooks/5_full_convolutional_network.ipynb
+++ b/notebooks/5_full_convolutional_network.ipynb
@@ -76,10 +76,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\advml\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\myenv\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "If using Keras pass *_constraint arguments to layers.\n",
-      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\advml\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\myenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:4070: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
       "\n"
      ]
     },
@@ -87,7 +87,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\users\\kerem\\github\\python-keras-deep-learning\\advml\\lib\\site-packages\\keras_applications\\resnet50.py:265: UserWarning: The output shape of `ResNet50(include_top=False)` has been changed since Keras 2.2.0.\n",
+      "c:\\users\\kerem\\github\\python-keras-deep-learning\\myenv\\lib\\site-packages\\keras_applications\\resnet50.py:265: UserWarning: The output shape of `ResNet50(include_top=False)` has been changed since Keras 2.2.0.\n",
       "  warnings.warn('The output shape of `ResNet50(include_top=False)` '\n"
      ]
     },
@@ -95,8 +95,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.2/resnet50_weights_tf_dim_ordering_tf_kernels_notop.h5\n",
-      "94658560/94653016 [==============================] - 20s 0us/step\n",
       "Base model output shape: (None, None, None, 2048)\n",
       "Model: \"resnet50\"\n",
       "__________________________________________________________________________________________________\n",
@@ -590,7 +588,7 @@
      "text": [
       "Image shape before resizing: (1600, 2560, 3)\n",
       "Image batch shape before forward pass: (1, 224, 224, 3)\n",
-      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\advml\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
+      "WARNING:tensorflow:From c:\\users\\kerem\\github\\python-keras-deep-learning\\myenv\\lib\\site-packages\\keras\\backend\\tensorflow_backend.py:422: The name tf.global_variables is deprecated. Please use tf.compat.v1.global_variables instead.\n",
       "\n",
       "Prediction map shape: (1, 7, 7, 1000)\n"
      ]
@@ -653,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "36eabe91-d517-46fe-8817-e8553f632245",
    "metadata": {},
    "outputs": [
@@ -756,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "29ad3733-a018-4434-8d80-6d8f837c7f8c",
    "metadata": {},
    "outputs": [
@@ -788,6 +786,14 @@
     "plt.title(\"Combined Heatmap (Geometric Mean)\")\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e6404d39-01f9-40bc-b1ee-6497f41e0417",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
