--- a/notebooks/8_variational_autoencoders.ipynb
+++ b/notebooks/8_variational_autoencoders.ipynb
@@ -433,7 +433,7 @@
    "outputs": [],
    "source": [
     "# vae.fit(x_train_standard, epochs=50, batch_size=100, validation_data=(x_test_standard, None))\n",
-    "vae.load_weights(\"Files/standard_weights.h5\")"
+    "vae.load_weights(\"Files/weights_standard.h5\")"
    ]
   },
   {
@@ -886,7 +886,7 @@
    "outputs": [],
    "source": [
     "# vae.fit(x_train_conv, epochs=15, batch_size=100, validation_data=(x_test_conv, None))\n",
-    "vae.load_weights(\"Files/convolutional_weights.h5\")"
+    "vae.load_weights(\"Files/weights_convolutional.h5\")"
    ]
   },
   {
@@ -1056,12 +1056,12 @@
     "\n",
     "# For fully-connected VAE\n",
     "vae_standard = make_vae((original_dim,), encoder, decoder, sampling_layer)\n",
-    "vae_standard.load_weights(\"Files/standard_weights.h5\")\n",
+    "vae_standard.load_weights(\"Files/weights_standard.h5\")\n",
     "loss_standard = compute_reconstruction_loss(vae_standard, x_test_standard)\n",
     "\n",
     "# For convolutional VAE\n",
     "vae_conv = make_vae((img_rows, img_cols, img_chns), conv_encoder, conv_decoder, sampling_layer)\n",
-    "vae_conv.load_weights(\"Files/convolutional_weights.h5\")\n",
+    "vae_conv.load_weights(\"Files/weights_convolutional.h5\")\n",
     "loss_conv = compute_reconstruction_loss(vae_conv, x_test_conv)\n",
     "\n",
     "print(\"Fully-Connected VAE Loss:\", loss_standard)\n",
@@ -1187,7 +1187,7 @@
     }
    ],
    "source": [
-    "vae.load_weights(\"Files/convolutional_weights.h5\")\n",
+    "vae.load_weights(\"Files/weights_convolutional.h5\")\n",
     "\n",
     "generated = conv_decoder.predict(np.random.normal(size=(1, latent_dim)))\n",
     "plt.imshow(generated.reshape(28, 28), cmap=plt.cm.gray)\n",
