--- a/notebooks/3_neural_recommender.ipynb
+++ b/notebooks/3_neural_recommender.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "639256ef-e938-44f5-b0c1-49878e23bfc1",
+   "metadata": {},
+   "source": [
+    "# PART I"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8bbc98f5-08c1-4221-a958-f1cbc92a53df",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
@@ -842,7 +850,9 @@
   {
    "cell_type": "markdown",
    "id": "0ae478e4-d628-4251-ac65-9a7b42aa0ffa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Step 7.3: Visualizing Embeddings"
    ]
@@ -949,6 +959,289 @@
     "for title, pred_rating in recommend(5):\n",
     "    print(f\"    {pred_rating:.1f}: {title}\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a29eba6d-b64d-4c77-8e6d-541826754719",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# PART II"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c339d74-24c1-49c4-a69f-209854256ce4",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Step 1: Import Libraries and Create Embedding Matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "7098836f-f7ec-45b9-903f-5e0d8512d200",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Embedding Matrix:\n",
+      " [[ 0.  1.  2.  3.]\n",
+      " [ 4.  5.  6.  7.]\n",
+      " [ 8.  9. 10. 11.]\n",
+      " [12. 13. 14. 15.]\n",
+      " [16. 17. 18. 19.]\n",
+      " [20. 21. 22. 23.]\n",
+      " [24. 25. 26. 27.]\n",
+      " [28. 29. 30. 31.]\n",
+      " [32. 33. 34. 35.]\n",
+      " [36. 37. 38. 39.]]\n",
+      "\n",
+      "Embedding vector for index 3:\n",
+      " [12. 13. 14. 15.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "embedding_size = 4\n",
+    "vocab_size = 10\n",
+    "\n",
+    "# Create the embedding matrix\n",
+    "embedding_matrix = np.arange(embedding_size * vocab_size, dtype='float32')\n",
+    "embedding_matrix = embedding_matrix.reshape(vocab_size, embedding_size)\n",
+    "print(\"\\nEmbedding Matrix:\\n\", embedding_matrix)\n",
+    "\n",
+    "# Example index to fetch an embedding\n",
+    "i = 3\n",
+    "print(f\"\\nEmbedding vector for index {i}:\\n\", embedding_matrix[i])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "957a8a8d-b761-4530-ab4f-75a13cf858f9",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Step 2: Define One-Hot Encoding and Calculate the Embedding Vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2f6f31f9-5ecc-4fb5-8be0-cd8bd5565fb2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "One-hot encoded vector for index 3:\n",
+      " [0. 0. 0. 1. 0. 0. 0. 0. 0. 0.]\n",
+      "\n",
+      "Embedding vector for index 3:\n",
+      " [12. 13. 14. 15.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def onehot_encode(dim, label):\n",
+    "    return np.eye(dim)[label]\n",
+    "\n",
+    "# One-hot encode for the given index\n",
+    "onehot_i = onehot_encode(vocab_size, i)\n",
+    "print(f\"\\nOne-hot encoded vector for index {i}:\\n\", onehot_i)\n",
+    "\n",
+    "# Compute the embedding vector by multiplying one-hot vector with the embedding matrix\n",
+    "embedding_vector = np.dot(onehot_i, embedding_matrix)\n",
+    "print(f\"\\nEmbedding vector for index {i}:\\n\", embedding_vector)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e95953be-fec9-48a2-beb7-b2c4775d7dbb",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Step 3: Create the Keras Embedding Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "9c4e986a-4433-43fc-a7f1-40088f46b283",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Model output shape:\n",
+      " (None, 1, 4)\n",
+      "\n",
+      "Model weights:\n",
+      " [array([[ 0.,  1.,  2.,  3.],\n",
+      "       [ 4.,  5.,  6.,  7.],\n",
+      "       [ 8.,  9., 10., 11.],\n",
+      "       [12., 13., 14., 15.],\n",
+      "       [16., 17., 18., 19.],\n",
+      "       [20., 21., 22., 23.],\n",
+      "       [24., 25., 26., 27.],\n",
+      "       [28., 29., 30., 31.],\n",
+      "       [32., 33., 34., 35.],\n",
+      "       [36., 37., 38., 39.]], dtype=float32)]\n",
+      "Model: \"model_4\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "input (InputLayer)           (None, 1)                 0         \n",
+      "_________________________________________________________________\n",
+      "my_embedding (Embedding)     (None, 1, 4)              40        \n",
+      "=================================================================\n",
+      "Total params: 40\n",
+      "Trainable params: 40\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "\n",
+      "Model summary:\n",
+      " None\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.layers import Embedding\n",
+    "from keras.layers import Input\n",
+    "from keras.models import Model\n",
+    "\n",
+    "# Define the embedding layer\n",
+    "embedding_layer = Embedding(output_dim=embedding_size, input_dim=vocab_size, weights=[embedding_matrix], input_length=1, name='my_embedding')\n",
+    "\n",
+    "# Set up the Keras model using the embedding layer\n",
+    "x = Input(shape=[1], name='input')\n",
+    "embedding = embedding_layer(x)\n",
+    "model = Model(inputs=x, outputs=embedding)\n",
+    "\n",
+    "# Print the output shape of the model\n",
+    "print(f\"\\nModel output shape:\\n {model.output_shape}\")\n",
+    "\n",
+    "# Print model weights (embedding weights)\n",
+    "print(f\"\\nModel weights:\\n\", model.get_weights())\n",
+    "\n",
+    "# Print model summary to show trainable parameters\n",
+    "print(f\"\\nModel summary:\\n\", model.summary())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d68e85ee-c191-4785-8986-3c801aa1f499",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Step 4: Make Predictions with the Keras Embedding Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "79e4254c-f482-4e73-9c7e-c99a7421322f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Prediction for label 3:\n",
+      " [[[12. 13. 14. 15.]]]\n",
+      "\n",
+      "Predictions for labels [3, 3, 0, 9]:\n",
+      " [[[12. 13. 14. 15.]]\n",
+      "\n",
+      " [[12. 13. 14. 15.]]\n",
+      "\n",
+      " [[ 0.  1.  2.  3.]]\n",
+      "\n",
+      " [[36. 37. 38. 39.]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example of projecting integer labels into their matching embedding vectors\n",
+    "\n",
+    "labels_to_encode = np.array([[3]])\n",
+    "print(f\"\\nPrediction for label 3:\\n\", model.predict(labels_to_encode))\n",
+    "\n",
+    "labels_to_encode = np.array([[3], [3], [0], [9]])\n",
+    "print(f\"\\nPredictions for labels [3, 3, 0, 9]:\\n\", model.predict(labels_to_encode))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12537974-b9f9-4c0d-bc3c-baf128ed2c19",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# Step 5: Flatten the Output of the Embedding Layer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "1741d388-f563-41e1-bb63-af4b28369972",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "New model output shape after flattening:\n",
+      " (None, 4)\n",
+      "\n",
+      "Prediction for label 3 after flattening:\n",
+      " [[12. 13. 14. 15.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from keras.layers import Flatten\n",
+    "\n",
+    "# Modify the model to flatten the output (removing the sequence dimension)\n",
+    "y = Flatten()(embedding_layer(x))\n",
+    "model2 = Model(inputs=x, outputs=y)\n",
+    "\n",
+    "# Print the output shape of the new model\n",
+    "print(f\"\\nNew model output shape after flattening:\\n {model2.output_shape}\")\n",
+    "\n",
+    "# Test the flattened model with a sample input\n",
+    "print(f\"\\nPrediction for label 3 after flattening:\\n\", model2.predict(np.array([3])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63b501c2-81dc-45cc-8dc8-bab24368d42b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
