refactor: 7 is revised and cleaned
Former-commit-id: 015cbcef9b24090402ade47cab48357ce00f6188 [formerly 7b1a69f22eeb8925d75f775c98a05b94e63af823 [formerly e9681f3b7c1b8f97c0c2d058068bf04341d17c00] [formerly f11a5627e1b155d3e7454380f304aeba7afe1a24]] [formerly a434d9656d36c8135c878111dad283be2e8fdc48 [formerly 97ba89dde708152bffa4a6962d8894f9b5d917fb [formerly d26289324dbcf202cc1bad5b999e8d59c254f0fc] [formerly 7a9aea4c0a86d9ec4a64e6feeb107668af0b6bb3 [formerly 78f0891773df57232c45f916dc71ccdd4fa57dca]] [formerly db270386438cce1fe5167ff5867f48d3ced10254]] [formerly 97ba89dde708152bffa4a6962d8894f9b5d917fb [formerly d26289324dbcf202cc1bad5b999e8d59c254f0fc] [formerly 7a9aea4c0a86d9ec4a64e6feeb107668af0b6bb3 [formerly 78f0891773df57232c45f916dc71ccdd4fa57dca]] [formerly db270386438cce1fe5167ff5867f48d3ced10254] [formerly 7b1a69f22eeb8925d75f775c98a05b94e63af823 [formerly e9681f3b7c1b8f97c0c2d058068bf04341d17c00] [formerly f11a5627e1b155d3e7454380f304aeba7afe1a24] [formerly f11a5627e1b155d3e7454380f304aeba7afe1a24 [formerly 249617c31de98a9ae356858434186cf89d07019e]]]]]
Former-commit-id: 444167971f0c5f54c00d87b955213ac4a53baabf
Former-commit-id: f41170bbd072daaefdbad576ebd130804522c9fd
Former-commit-id: 72fcea34bc5fd073f4ae88e6f63910f53e7cf6af [formerly be568b61c908da614a7198fb9dde60f9d9fc0335] [formerly e75d14dd8bb0ea438262cb5a753335cd0d40fe49] [formerly d7f110a6f3439a71dde65d9ad018397f9957d51f [formerly 50fd78ea78aefe098b94361765e501d456d3d7c2]]
Former-commit-id: 7fa16873485617723cefee216bbed49cad933a8a
Former-commit-id: 1126f96cc9a8fda531776d1edb9f91fa8072c748 [formerly 887d0dc4853fde3b190e973c59c382590d4176df]
Former-commit-id: 69e1807d37539005ad33acc283c8a14498fc030f

--- a/notebooks/3_neural_recommender.ipynb
+++ b/notebooks/3_neural_recommender.ipynb
@@ -5,13 +5,14 @@
    "id": "639256ef-e938-44f5-b0c1-49878e23bfc1",
    "metadata": {},
    "source": [
-    "# PART I"
+    "# **PART I: Neural Recommender System** #"
    ]
   },
   {
    "cell_type": "markdown",
    "id": "8bbc98f5-08c1-4221-a958-f1cbc92a53df",
    "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -966,7 +967,7 @@
     "tags": []
    },
    "source": [
-    "# PART II"
+    "# **PART II: Embeddings with Keras** #"
    ]
   },
   {
