refactor: 7 is revised and cleaned

--- a/notebooks/5_full_convolutional_network.ipynb
+++ b/notebooks/5_full_convolutional_network.ipynb
@@ -456,7 +456,7 @@
     }
    ],
    "source": [
-    "import Files.imagenet_tool\n",
+    "from Files.imagenet_tool import *\n",
     "\n",
     "# Dog synset\n",
     "synset = \"n02084071\" # synset corresponding to dogs\n",
