feat: Install Dependencies parts updated

--- a/notebooks/2_backpropagation.ipynb
+++ b/notebooks/2_backpropagation.ipynb
@@ -2,6 +2,172 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "feb1de16-f604-4684-9748-26f02b63ba08",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
+    "# ***INSTALL DEPENDENCIES*** #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "010b652f-a0dd-423d-8ac7-c444bb836526",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "# Deep Learning Examples with Keras\n",
+       "\n",
+       "A collection of deep learning examples using Keras, covering neural networks, recommender systems, convolutions, and object detection. Based on the course **Advanced Machine Learning**, University of Debrecen.\n",
+       "\n",
+       "## GitHub Repository (Standalone Version)\n",
+       "\n",
+       "You can access the non-Colab version of the project directly on GitHub:\n",
+       "\n",
+       "[github.com/KeremDUZENLI/python-keras-deep-learning](https://github.com/KeremDUZENLI/python-keras-deep-learning)\n",
+       "\n",
+       "## Install\n",
+       "\n",
+       "1. Download Python 3.6.8: [Python 3.6.8 Download](https://www.python.org/downloads/release/python-368/)\n",
+       "2. Check Python versions installed: `py -0`\n",
+       "3. Check the default version: `python --version`\n",
+       "4. Select Python 3.6.8: [Video Guide](https://www.youtube.com/watch?v=C5mn0WWKmGY&t=10s)\n",
+       "\n",
+       "## Setup\n",
+       "\n",
+       "1. Clone the repository:\n",
+       "   ```sh\n",
+       "   git clone https://github.com/KeremDUZENLI/python-keras-deep-learning.git\n",
+       "   ```\n",
+       "2. Create a virtual environment:\n",
+       "   ```sh\n",
+       "   python -m venv myEnv\n",
+       "   ```\n",
+       "3. Activate the virtual environment:\n",
+       "   - **Windows**: `myEnv\\Scripts\\activate`\n",
+       "   - **Linux/macOS**: `source myEnv/bin/activate`\n",
+       "4. Update pip:\n",
+       "   ```sh\n",
+       "   python -m pip install --upgrade pip\n",
+       "   ```\n",
+       "5. Update setuptools:\n",
+       "   ```sh\n",
+       "   pip install --upgrade setuptools\n",
+       "   ```\n",
+       "6. Install dependencies:\n",
+       "   ```sh\n",
+       "   pip install -r requirements.txt\n",
+       "   ```\n",
+       "7. Freeze dependencies (optional):\n",
+       "   ```sh\n",
+       "   python -m pip freeze > requirements.txt\n",
+       "   ```\n",
+       "\n",
+       "## Notebooks\n",
+       "\n",
+       "1. Install Jupyter:\n",
+       "   ```sh\n",
+       "   pip install jupyterlab\n",
+       "   ```\n",
+       "2. Launch Jupyter:\n",
+       "   ```sh\n",
+       "   jupyter lab\n",
+       "   ```\n",
+       "\n",
+       "### Notebook Descriptions\n",
+       "\n",
+       "- [1. Neural Networks](notebooks/1_neural_networks.ipynb) – Basics of neural networks with Keras.\n",
+       "- [2. Backpropagation](notebooks/2_backpropagation.ipynb) – Understanding the backpropagation algorithm and its implementation in Keras.\n",
+       "- [3. Neural Recommender](notebooks/3_neural_recommender.ipynb) – Building a simple recommender system using neural networks.\n",
+       "- [4. Convolutional Networks](notebooks/4_convolutional_network.ipynb) – Introduction to convolutional neural networks (CNNs) for image classification.\n",
+       "- [5. Fully Convolutional Networks](notebooks/5_full_convolutional_network.ipynb) – Implementing a full convolutional network for image segmentation tasks.\n",
+       "- [6. CNN Classification](notebooks/6_convolutional_network_classification.ipynb) – Classifying images using a convolutional neural network.\n",
+       "- [7. Text Classification & Seq2Seq Translation](notebooks/7_text_classification_seq2seq_translation.ipynb) – Text classification using RNNs and sequence-to-sequence models for language translation.\n",
+       "- [8. Variational Autoencoders](notebooks/8_variational_autoencoders.ipynb) – Implementing variational autoencoders for generative modeling.\n",
+       "\n",
+       "## Acknowledgments\n",
+       "\n",
+       "This project is based on the **Advanced Machine Learning** course at the **University of Debrecen**\n",
+       "\n",
+       "- **Prof. Dr. András Hajdu** – Dean, Head of Department\n",
+       "\n",
+       "  - _Department of Data Science and Visualization, Faculty of Informatics, University of Debrecen_\n",
+       "  - Email: [hajdu.andras@inf.unideb.hu](mailto:hajdu.andras@inf.unideb.hu)\n",
+       "\n",
+       "- **Dr. Balázs Harangi** – Associate Professor, Deputy Head of Department\n",
+       "\n",
+       "  - _Department of Data Science and Visualization, Faculty of Informatics, University of Debrecen_\n",
+       "  - Email: [harangi.balazs@inf.unideb.hu](mailto:harangi.balazs@inf.unideb.hu)\n",
+       "\n",
+       "- **Kerem Düzenli** – PhD Candidate, University of Debrecen\n",
+       "\n",
+       "  - _Creator and maintainer of this repository_\n",
+       "  - Email: [kerem.duzenli@inf.unideb.hu](mailto:kerem.duzenli@inf.unideb.hu)\n",
+       "\n",
+       "## Contributing\n",
+       "\n",
+       "1. Fork the repository.\n",
+       "2. Create a new branch:\n",
+       "   ```sh\n",
+       "   git checkout -b YourBranch\n",
+       "   ```\n",
+       "3. Make your changes and commit them:\n",
+       "   ```sh\n",
+       "   git commit -m \"Add some feature\"\n",
+       "   ```\n",
+       "4. Push to the branch:\n",
+       "   ```sh\n",
+       "   git push origin YourBranch\n",
+       "   ```\n",
+       "5. Open a pull request.\n",
+       "\n",
+       "## License\n",
+       "\n",
+       "This project is licensed under the **Creative Commons Attribution-NonCommercial 4.0 International (CC BY-NC 4.0)** license. This means you are free to:\n",
+       "\n",
+       "- **Share** – Copy and redistribute the material in any medium or format.\n",
+       "- **Adapt** – Remix, transform, and build upon the material.\n",
+       "\n",
+       "However, **you may not use the material for commercial purposes**.\n",
+       "\n",
+       "For details, see the [LICENSE](LICENSE) file or read more at [Creative Commons](https://creativecommons.org/licenses/by-nc/4.0/).\n",
+       "\n",
+       "## Disclaimer\n",
+       "\n",
+       "This repository is intended **only for educational and research purposes**. The authors and contributors assume no responsibility for misuse of the code or any implications arising from its use.\n",
+       "\n",
+       "## Support My Work\n",
+       "\n",
+       "If you find this resource valuable and would like to help support my education and doctoral research, please consider treating me to a cup of coffee (or tea) via Revolut.\n",
+       "\n",
+       "<div align=\"center\">\n",
+       "  <a href=\"https://revolut.me/krmdznl\" target=\"_blank\">\n",
+       "    <img src=\"https://img.shields.io/badge/Support%20My%20Projects-Donate%20via%20Revolut-orange?style=for-the-badge\" alt=\"Support my education via Revolut\" />\n",
+       "  </a>\n",
+       "</div> <br>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "\n",
+    "with open('../README.md', 'r', encoding='utf-8') as f:\n",
+    "    display(Markdown(f.read()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7be7f85c-dc95-4df9-b87b-66ce86956bf9",
    "metadata": {
     "jp-MarkdownHeadingCollapsed": true,
